--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
   "projectName": "wikham.github.io",
-  "projectOwner": "wikham",
+  "projectOwner": "Wikham",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
